            Lexer speed improvements
            Bangle.js: Compass 'heading' now provides correct value (without 360-heading) required
            Bangle.js: Remove F_BEEPSET feature flag (now 3 years old)
            Espruino: Ensure flash/native strings really can't be appended to (fix #2282)
            Bangle.js2: Switch to 4 bit LCD mode (3900b wasted, but 5x fill speed increase)

     2v15 : Fix issue where `E.toJS("\0"+"0") == '"\00"'` which is just `"\0"`
            Fix issue accessing `arguments` after/inside 'let/const' keyword (fix #2224)
            let/const now don't add a scope if executed in a function outside a block (fix #2225)
            When executing a function, ensure the scope doesn't include a `return` var
            Rename internal return var to fit it inside one JsVar on embedded systems
            nRF52: Added support for 2 concurrent Bluetooth Central connections to Puck.js, Pixl.js, MDBT42Q (fix #1360)
            Bangle.js2: JIT now built in (only enabled for functions prefixed '"jit"')
            E.dumpVariables now outputs more info for variable values
            Puck.js Lite support
            Puck.js: Immediately after flashing new firmware, Puck.js now does a self-test and sets its BLE to PASS or FAIL
            nRF52: Fix recent regression which stopped reconnection after a bluetooth disconnect (fix #2226)
            Bangle.js: Include the 'sched' library in installed apps (needed for alarm) (fix #2229)
            Bangle.js2: Fix text size on buttons when they are tapped in E.showPrompt
            nRF5x: Add 'onWriteDesc' in NRF.setServices - allowing you to know when something subscribed for notifications
            nRF5x: Move advertising_start and restart_softdevice outside of IRQs (MEMORY_BUSY warnings less likely now)
            Bangle.js: Ensure E.showMessage background color comes from theme